# SimpleOSMRenderer

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/output/: _master.html  all_frames.html  event_0.html  event_1.html  event_10.html  event_100.html  event_101.html  event_102.html  event_103.html  event_104.html  event_105.html  event_106.html  event_107.html  event_108.html  event_109.html  event_11.html  event_110.html  event_111.html  event_112.html  event_113.html  event_114.html  event_115.html  event_116.html  event_117.html  event_118.html  event_119.html  event_12.html  event_120.html  event_121.html  event_122.html  event_123.html  event_124.html  event_13.html  event_14.html  event_15.html  event_16.html  event_17.html  event_18.html  event_19.html  event_2.html  (+87 more)
simpleosmrenderer/: __init__.py  renderer.py
tests/: test_renderer.py
