[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleOSMRenderer"
version = "0.1.0"
description = "Simple renderer for route frames to interactive HTML maps using Folium"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["folium>=0.15"]

[project.scripts]
simpleosmrenderer = "simpleosmrenderer.renderer:main"
